# ralloc

./: Cargo.toml  README.md  pool.mmap
src/: allocator.rs  allocator_v2.rs  lib.rs  main.rs  old_main_global_allocator.rs  v1.rs
src/backing/: array.rs  memmap.rs  mod.rs  slice.rs
src/wrappers/: mod.rs  shared.rs
